<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" 
    android:gravity="center"
    android:orientation="vertical" >

        <TextView
            android:id="@+id/routedetailsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_title"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/menuRoutesButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/routes_button" />

        <Button
            android:id="@+id/menuPersonalButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/personal_button" />

    </LinearLayout>
