<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    xmlns:tools="http://schemas.android.com/tools">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    tools:ignore="SelectableText" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <TextView
            android:id="@+id/routedetailsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/routedetails_title"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/routedetailsNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/routedetailsWallnameLable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/routedetails_wallname"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/routedetailsWallname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/routedetailsRoutedriverLable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/routedetails_routedriver"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/routedetailsRoutedriver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/routedetailsCreationdateLable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/routedetails_creationdate"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/routedetailsCreationdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/routedetailsHandlecolorLable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/routedetails_handlecolor"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/routedetailsHandlecolor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/routedetailsRatingLable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/routedetails_rating"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/routedetailsRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </RelativeLayout>
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10pt" >

        <TextView
            android:id="@+id/routedetailsAvaragecategorieLable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/routedetails_avaragecategorie"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/routedetailsAvaragecategorie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </RelativeLayout>
    
        <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/routedetailsAvarageRatingLable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/routedetails_avaragerating"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/routedetailsAvarageRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </RelativeLayout>
    

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/routedetailsFlashcountLable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/flashcount"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/routedetailsFlashcount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/routedetailsRotpunktcountLable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rotpunktcount"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/routedetailsRotpunktcount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/routedetailsProjectcountLable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/projectcount"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/routedetailsProjectcount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </RelativeLayout>
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/routedetailsNotclimbedcountLable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notclimbedcount"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/routedetailsNotclimbedcount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </RelativeLayout>

    <ImageView
        android:id="@+id/routedetailsPieChart"
        android:layout_width="300dp"
        android:layout_height="180dp"
        android:layout_weight="0.58"
        android:contentDescription="PieChart" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10pt" >

        <TextView
            android:id="@+id/routedetailsOwnRatingLable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/routedetails_ownRating"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:visibility="gone" />

        <TextView
            android:id="@+id/routedetailsOwnRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:visibility="gone" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/routedetailsOwnHowClimbedLable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/routedetails_ownHowClimbed"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:visibility="gone" />

        <TextView
            android:id="@+id/routedetailsOwnHowClimbed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:visibility="gone" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/routedetailsOwnCategorieLable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/routedetails_ownCategorie"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:visibility="gone" />

        <TextView
            android:id="@+id/routedetailsOwnCategorie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:visibility="gone" />
    </RelativeLayout>

    <Button
        android:id="@+id/raterouteButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rateroute_button" />

</LinearLayout>
</ScrollView>